--- a/404.html
+++ b/404.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/Portfolio/" />  
+
     <title>Parimalanath Reddy Kodumuru | Data Scientist & Engineer</title>
     <meta name="description" content="Data Scientist and Engineer with expertise in machine learning, AI, and data analysis. Master's in Business Data Science & Analytics from Michigan State University. Specializing in predictive analytics, computer vision, and optimization solutions." />
     <meta name="author" content="Parimalanath Reddy Kodumuru" />
