Add <base> for GitHub Pages subpath

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/Portfolio/" />  
+    <base href="/Portfolio/">
 
     <title>Parimalanath Reddy Kodumuru | Data Scientist & Engineer</title>
     <meta name="description" content="Data Scientist and Engineer with expertise in machine learning, AI, and data analysis. Master's in Business Data Science & Analytics from Michigan State University. Specializing in predictive analytics, computer vision, and optimization solutions." />
